# libregmap

./: CMakeLists.txt  Readme.md
imx6_mmdc_profiling_demo/: main.cpp  mmdc.json
include/: IRegBackend.hpp  RegMapBase.hpp  RegMapMock.hpp  RegisterBase.hpp  devmem.hpp  i2c.hpp  pci.hpp  regmap.hpp  regmap_conversions.hpp
pcf8523_demo/: main.cpp  pcf8523.json
rtl8168_MII_demo/: main.cpp  rtl8168.json
src/: RegisterBase.cpp  devmem.cpp  i2c.cpp  pci.cpp
tests/: busy_ready_mask.json  busy_ready_mask_tests.cpp  conversions_tests.cpp  definition_parsing.cpp  getter_tests.cpp  main.cpp  operator_tests.cpp  register_helper_functions.cpp  simple.json  wrong_register_size.json
