PROJECT(libregmap)
cmake_minimum_required(VERSION 3.1)

SET(CMAKE_CXX_STANDARD 11)

#SET(Boost_USE_STATIC_LIBS ON)
#SET(Boost_USE_MULTITHREADED OFF)
FIND_PACKAGE(Threads)
FIND_PACKAGE(Boost 1.55 COMPONENTS system filesystem REQUIRED)

FILE(GLOB LIB_SOURCES "src/*.cpp")
INCLUDE_DIRECTORIES("include")

ADD_LIBRARY(libregmap-static STATIC ${LIB_SOURCES})
TARGET_LINK_LIBRARIES(libregmap-static ${CMAKE_THREAD_LIBS_INIT} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
ADD_LIBRARY(libregmap SHARED ${LIB_SOURCES})
SET_TARGET_PROPERTIES(libregmap PROPERTIES POSITION_INDEPENDENT_CODE ON)
TARGET_LINK_LIBRARIES(libregmap ${CMAKE_THREAD_LIBS_INIT} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})

# RTL8161 Demo
FILE(GLOB RTL8168_SOURCES "rtl8168_MII_demo/*.cpp")
ADD_EXECUTABLE(rtl8168_mii_demo ${RTL8168_SOURCES})
TARGET_LINK_LIBRARIES(rtl8168_mii_demo libregmap-static ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})

# unit tests
ENABLE_TESTING()
FILE(GLOB TEST_SOURCES "tests/*.cpp")
ADD_EXECUTABLE(testrunner ${TEST_SOURCES})
TARGET_LINK_LIBRARIES(testrunner libregmap-static ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY}) 
ADD_TEST(NAME Testrunner WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests COMMAND testrunner --log_level=test_suite)
